--- a/lightningOutTest.html
+++ b/lightningOutTest.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="https://hcheedella4-dev-ed.lightning.force.com/lightning/lightning.out.js"/>
+<script src="https://hcheedella4-dev-ed.my.site.com/lightning/lightning.out.js"/>
 <script>
   $Lightning.use(
       "c:lightningOutDemoApp", // name of the Lightning app
