--- a/lightningOutTest.html
+++ b/lightningOutTest.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="https://hcheedella4-dev-ed.my.site.com/lightning/lightning.out.js"/>
+<script src="https://hcheedella4-dev-ed.my.site.com/homepage/lightning/lightning.out.js"/>
 <script>
   $Lightning.use(
       "c:lightningOutDemoApp", // name of the Lightning app
@@ -15,7 +15,7 @@
               },
           );
       },
-      "https://hcheedella4-dev-ed.my.site.com",
+      "https://hcheedella4-dev-ed.my.site.com/homepage",
   );
 </script>
 </head>
